# worktime

./: Cargo.toml  README.md
src/: main.rs  winit_helper.rs
ui/: app-window.slint
