[package]
name = "slint-rust-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.8.0"
tokio = { version = "1.0", features = ["full"] }
i-slint-backend-winit = "1.5"

[build-dependencies]
slint-build = "1.8.0"
